Spacing characters underline fix
On Outlook web, spacers with a &nbsp; char would be styled with an underline. This styling is now fixed.

--- a/src/assets/scss/_overrides.scss
+++ b/src/assets/scss/_overrides.scss
@@ -37,3 +37,7 @@ hr {
 a {
   font-weight: $header-font-weight;
 }
+
+table.spacer {
+  text-decoration: none !important;
+}
